reutilizo estilos de oage create en page edit

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-home">
         <section class="seccion-nuevos-ingresos">
             <div class="cont-banner">
                 <article class="cont-nuevos-ingresos">
