--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="container main-carrito">
+    <main class="main-carrito">
         <h2 class="titulo-seccion titulo-carrito">CARRITO DE COMPRAS</h2>
         <div class="container cont-subtitulo-carrito">
             <h3 class="subtitulo-carrito subtitulo-carrito-detalle">DETALLE DE PRODUCTO</h3>
