--- a/pages/login.html
+++ b/pages/login.html
@@ -4,24 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles/create.css">
+    <link rel="stylesheet" href="../styles/login-register.css">
     <title>Login - Funkoshop</title>
 </head>
 
 <body>
-    <main>
-        <h2>INGRESAR A MICUENTA</h2>
-        <form action="">
-            <label for="email">Email</label>
-            <input type="email" name="email">
-            <label for="password">Contraseña</label>
-            <input type="password" name="password">
-            <div>
-                <button type="submit">Ingresar</button>
-                <input type="checkbox" name="recordarme"><label for="recordarme">Recordarme</label>
-
+    <main class="main-login">
+        <h2 class="titulo-seccion titulo-login">INGRESAR A MI CUENTA</h2>
+        <form action="" class="form-login-register">
+            <div class="cont-input">
+                <label for="email">Email:</label>
+                <input type="email" name="email" class="form-input" placeholder="johndoe@correo.com">
             </div>
-            <a href="">Olvidé mi cuenta</a>
+            <div class="cont-input">
+                <label for="password">Contraseña:</label>
+                <input type="password" name="password" class="form-input" placeholder="*********">
+            </div>
+            <div class="cont-submit">
+                <button type="submit" class="btn-form">Ingresar</button>
+                <div class="cont-checkbox">
+
+                    <input type="checkbox" name="recordarme"><label for="recordarme"
+                        class="recordarme">Recordarme</label>
+
+                </div>
+            </div>
+
         </form>
+        <a href="" class="link-restablecer-pass">Olvidé mi cuenta</a>
     </main>
 
 </body>
