--- a/pages/register.html
+++ b/pages/register.html
@@ -4,24 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles/create.css">
     <title>Register - Funkoshop</title>
 </head>
 
 <body>
     <main>
-        <h2>CREA TU CUENTA</h2>
+        <h2 class="titulo-seccion">CREA TU CUENTA</h2>
         <p>Completa el formulario para ser parte del muno de los Funkos</p>
         <form action="" class="form-registro">
-            <label for="nombre">Nombre</label><input type="text" name="nombre" id="" placeholder="John">
-            <label for="apellido">Apellido</label><input type="text" name="apellido" id="" placeholder="Doe">
+            <label for="nombre">Nombre</label><input type="text" name="nombre" id="" placeholder="John" <input
+                type="email" name="email" class="form-input">
+            <label for="apellido">Apellido</label><input type="text" name="apellido" id="" placeholder="Doe" <input
+                type="email" name="email" class="form-input">
             <label for="email">Email</label><input type="email" name="email" id="" placeholder="johndoe@correo.com">
             <label for="password">Contraseña</label><input type="password" name="password" id=""
                 placeholder="*********">
+            <input type="email" name="email" class="form-input">
             <label for="repita-password">Repita Contraseña</label><input type="text" name="repita-password" id=""
-                placeholder="*********">
+                placeholder="*********"> <input type="email" name="email" class="form-input">
         </form>
         <div>
-            <button>Registrar</button>
+            <button class="btn-form">Registrar</button>
             <input type="checkbox" name="acepto-condiciones" id="">
             <label for="acepto-condiciones">Acepto<a href="">Términos y Condiciones</a></label>
         </div>
