agrego estilos a page Register

--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
             </div>
 
         </form>
-        <a href="" class="link-restablecer-pass">Olvidé mi cuenta</a>
+        <a href="" class="link-form">Olvidé mi cuenta</a>
     </main>
 
 </body>
