unifico hojas de estilo de pages create y edit

--- a/pages/create.html
+++ b/pages/create.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../styles/create.css">
+    <link rel="stylesheet" href="../styles/create-edit.css">
     <title>Create - Funkoshop</title>
 </head>
 
 <body>
-    <main class="create-main">
+    <main class="">
         <h2 class="titulo-seccion">CREAR NUEVO ITEM</h2>
-        <form action="" class="create-form">
+        <form action="" class="form-item">
             <div class="cont-categ-licencia">
                 <div>
                     <label for="categoria" class="form-label">Categoria</label>
