--- a/pages/item.html
+++ b/pages/item.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <iframe src="../components/header.html" frameborder="0" width="100%" height="144px"></iframe>
     <main>
         <section class="container section-item">
             <article class="article-card-item">
@@ -89,6 +90,7 @@
             </ul>
         </section>
     </main>
+    <iframe src="../components/footer.html" frameborder="0" width="100%" height="343px"></iframe>
 
 </body>
 
