--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
         </nav>
     </header>
     <main class="main-home">
-        <section class="seccion-nuevos-ingresos">
-            <div class="cont-banner">
-                <article class="cont-nuevos-ingresos">
-                    <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
-                    <p>Descubrí el próximo Funko Pop de tu colección</p>
-                    <button class="link-shop" onclick="window.location.href='./pages/shop.html'">SHOP</button>
-                </article>
-            </div>
-
-
+        <section class="banner">
+            <article class="cont-nuevos-ingresos">
+                <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
+                <p>Descubrí el próximo Funko Pop de tu colección</p>
+                <button class="link-shop" onclick="window.location.href='./pages/shop.html'">SHOP</button>
+            </article>
         </section>
         <section class="container seccion-colecciones">
 
