agrego efectos a hover de botones y cards de home

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                     </h3>
                     <p class="articulo-detalle-descripcion">Disfruta de una saga que sigue agregando personajes a su
                         colección.</p>
-                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
 
                 </div>
@@ -66,7 +65,6 @@
                     </h3>
                     <p class="articulo-detalle-descripcion">Atrapa todos los que puedas y disfruta de una colección
                         llena de amigos.</p>
-                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
                 </div>
             </article>
@@ -76,7 +74,6 @@
                     </h3>
                     <p class="articulo-detalle-descripcion"> Revive los recuerdos de
                         una saga llena de magia y encanto</p>
-                    <img src="./assets/branding/Line 3.svg" alt="" class="linea-divisoria">
                     <button class="btn-ver-coleccion">VER COLECCIÓN</button>
                 </div>
                 <picture class="cont-img-articulo"><img src="./assets/harry-potter/snape-patronus-1.webp"
@@ -93,8 +90,11 @@
                     <article class="card-producto">
                         <a href="">
                             <picture class="cont-img-card-producto">
+                                <span class="card-producto__tag">Nuevo</span>
                                 <img src="./assets/star-wars/trooper-1.webp" alt="STORMTROOPER LIGHTSABER"
-                                    class="img-card-producto">
+                                    class="img-card-producto card-item__img--front">
+                                <img src="./assets/star-wars/trooper-box.webp" alt="STORMTROOPER LIGHTSABER BOX"
+                                    class="img-card-producto card-item__img--back">
                             </picture>
                             <p class="subtitulo-card-producto">STAR WARS</p>
                             <h4 class="titulo-card-producto">STORMTROOPER LIGHTSABER</h4>
@@ -108,7 +108,11 @@
                     <article class="card-producto">
                         <a href="">
                             <picture class="cont-img-card-producto">
-                                <img src="./assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO" class="img-card-producto">
+                                <span class="card-producto__tag">Nuevo</span>
+                                <img src="./assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO"
+                                    class="img-card-producto card-item__img--front">
+                                <img src="./assets/pokemon/pidgeotto-box.webp" alt="PIDGEOTTO BOX"
+                                    class="img-card-producto card-item__img--back">
                             </picture>
                             <p class="subtitulo-card-producto">POKEMON</p>
                             <h4 class="titulo-card-producto">PIDGEOTTO</h4>
@@ -122,8 +126,11 @@
                     <article class="card-producto">
                         <a href="">
                             <picture class="cont-img-card-producto">
+                                <span class="card-producto__tag">Nuevo</span>
                                 <img src="./assets/harry-potter/luna-1.webp" alt="LUNA LOVEGOOD LION MASK"
-                                    class="img-card-producto">
+                                    class="img-card-producto card-item__img--front">
+                                <img src="./assets/harry-potter/luna-box.webp" alt="LUNA LOVEGOOD LION MASK BOX"
+                                    class="img-card-producto card-item__img--back">
                             </picture>
                             <p class="subtitulo-card-producto">HARRY POTTER</p>
                             <h4 class="titulo-card-producto">LUNA LOVEGOOD LION MASK</h4>
