creo función en JS para cargar header y footer en todas las pages

--- a/index.html
+++ b/index.html
@@ -9,31 +9,7 @@
 </head>
 
 <body class="body-home">
-    <header>
-        <picture><a href="/index.html">
-                <img src="./assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
-            </a></picture>
-
-        <nav class="nav-header">
-            <ul class="list-nav-header">
-                <li class="nav-header-item whit-submenu">
-                    <a href="" class="nav-header-link whit-icon">SHOP <iconify-icon
-                            icon="tabler:chevron-down"></iconify-icon></a>
-                    <ul class="submenu">
-                        <li class="submenu-item"><a href=""> FUNKOS </a></li>
-                        <li class="submenu-item"><a href=""> REMERAS </a></li>
-                        <li class="submenu-item"><a href=""> LLAVEROS </a></li>
-                    </ul>
-                </li>
-                <li class="nav-header-item"><a class="nav-header-link" href="">CONTACTO</a></li>
-                <li class="nav-header-item"><a class="nav-header-link" href="../pages/login.html">LOGIN</a></li>
-                <li class="nav-header-item">
-                    <a class="nav-header-link-cart" href="../pages/carrito.html"><img
-                            src="../assets/icons/cart-icon.svg" alt="Icono de carrito de compras" /> </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <header></header>
     <main class="main-home">
         <section class="banner">
             <article class="cont-nuevos-ingresos">
@@ -143,23 +119,10 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <div class="cont-nav-footer">
-            <nav class="nav-footer">
-
-                <ul class="list-nav-footer">
-                    <li><a href="./pages/shop.html">SHOP</a></li>
-                    <li><a href="./pages/login.html">INGRESAR</a></li>
-                    <li><a href="">CONTACTO</a></li>
-                </ul>
-            </nav>
-            <img src="./assets/branding/isotype.svg" alt="logo-funkoshop" class="logo-funkoshop-footer" />
-        </div>
-
-        <p class="copy-footer">All rights reserved 2023 - Funkoshop &copy;</p>
-    </footer>
+    <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
