--- a/pages/admin.html
+++ b/pages/admin.html
@@ -10,19 +10,7 @@
 </head>
 
 <body>
-    <header>
-        <picture><a href="/index.html">
-                <img src="../assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
-            </a></picture>
-
-        <nav class="nav-header">
-            <ul class="list-nav-header">
-                <li><a href="">VER TIENDA</a></li>
-                <li><a href="">ADMIN</a></li>
-                <li><a href="">SALIR</a></li>
-            </ul>
-        </nav>
-    </header>
+    <header></header>
     <main>
         <section>
             <form action="" class="form-buscar-producto">
@@ -202,23 +190,9 @@
 
         </section>
     </main>
-    <footer>
-        <div class="cont-nav-footer">
-            <nav class="nav-footer">
+    <footer></footer>
 
-                <ul class="list-nav-footer">
-                    <li><a href="../pages/shop.html">SHOP</a></li>
-                    <li><a href="../pages/register.html">REGISTRARSE</a></li>
-                    <li><a href="../pages/login.html">INGRESAR</a></li>
-                    <li><a href="">CONTACTO</a></li>
-                </ul>
-            </nav>
-            <img src="../assets/branding/isotype.svg" alt="logo-funkoshop" class="logo-funkoshop-footer" />
-        </div>
-
-        <p class="copy-footer">All rights reserved 2023 - Funkoshop &copy;</p>
-    </footer>
-
+    <script src="../app.js"></script>
 </body>
 
 </html>
