--- a/pages/register.html
+++ b/pages/register.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header></header>
     <main class="main-register">
         <h2 class="titulo-seccion">CREA TU CUENTA</h2>
         <p class="p-register">Completa el formulario para ser parte del muno de los Funkos</p>
@@ -33,7 +34,9 @@
                     Condiciones</a></label>
         </div>
     </main>
+    <footer></footer>
 
+    <script src="../app.js"></script>
 </body>
 
 </html>
