--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe src="../components/header.html" frameborder="0" width="100%" height="144px"></iframe>
+    <header></header>
     <main class="main-carrito">
         <h2 class="titulo-seccion titulo-carrito">CARRITO DE COMPRAS</h2>
         <div class="container cont-subtitulo-carrito">
@@ -93,7 +93,8 @@
             <a href="" class="link-pago">IR A PAGAR</a>
         </div>
     </main>
-    <iframe src="../components/footer.html" frameborder="0" width="100%" height="343px"></iframe>
+    <footer></footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
