--- a/pages/create.html
+++ b/pages/create.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header></header>
     <main class="">
         <h2 class="titulo-seccion">CREAR NUEVO ITEM</h2>
         <form action="" class="form-item">
@@ -70,7 +71,8 @@
 
         </form>
     </main>
-
+    <footer></footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
