--- a/pages/edit.html
+++ b/pages/edit.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header></header>
     <main class="">
         <h2 class="titulo-seccion">EDITAR ITEM</h2>
         <form action="" class="form-item">
@@ -86,7 +87,9 @@
 
         </form>
     </main>
+    <footer></footer>
 
+    <script src="../app.js"></script>
 </body>
 
 </html>
