--- a/pages/item.html
+++ b/pages/item.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe src="../components/header.html" frameborder="0" width="100%" height="144px"></iframe>
+    <header></header>
     <main>
         <section class="container section-item">
             <article class="article-card-item">
@@ -90,8 +90,8 @@
             </ul>
         </section>
     </main>
-    <iframe src="../components/footer.html" frameborder="0" width="100%" height="343px"></iframe>
-
+    <footer></footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
