--- a/pages/login.html
+++ b/pages/login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header></header>
     <main class="main-login">
         <h2 class="titulo-seccion titulo-login">INGRESAR A MI CUENTA</h2>
         <form action="" class="form-login-register">
@@ -34,7 +35,8 @@
         </form>
         <a href="" class="link-form">Olvidé mi cuenta</a>
     </main>
-
+    <footer></footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
