--- a/pages/shop.html
+++ b/pages/shop.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe src="../components/header.html" frameborder="0" width="100%" height="144px"></iframe>
+    <header></header>
     <div class="container body-shop">
         <aside class="aside-shop">
             <form action="" class="form-filtros-shop">
@@ -205,8 +205,8 @@
             </section>
         </main>
     </div>
-    <iframe src="../components/footer.html" frameborder="0" width="100%" height="343px"></iframe>
-
+    <footer></footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
