add slider to pages home and item

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -190,22 +190,23 @@
                 </ul>
                 <div class="paginado">
                     <ul class="lista-paginado">
-                        <li class=""><a href="" class="item-lista-paginado">
-                                < </a>
+                        <li class="lista-pag-item"><a href="" class="link-lista-paginado link-prev">
+                                <iconify-icon icon="ooui:next-rtl"></iconify-icon></a>
                         </li>
-                        <li class=""><a href="" class="item-lista-paginado">1</a></li>
-                        <li class=""><a href="" class="item-lista-paginado">2</a></li>
-                        <li class=""><a href="" class="item-lista-paginado">...</a></li>
-                        <li class=""><a href="" class="item-lista-paginado">9</a></li>
-                        <li class=""><a href="" class="item-lista-paginado">10</a></li>
-                        <li class=""><a href="" class="item-lista-paginado">
-                                > </a></li>
+                        <li class=""><a href="" class="link-lista-paginado">1</a></li>
+                        <li class=""><a href="" class="link-lista-paginado">2</a></li>
+                        <li class=""><a href="" class="link-lista-paginado">...</a></li>
+                        <li class=""><a href="" class="link-lista-paginado">9</a></li>
+                        <li class=""><a href="" class="link-lista-paginado">10</a></li>
+                        <li class=""><a href="" class="link-lista-paginado link-next">
+                                <iconify-icon icon="ooui:next-ltr"></iconify-icon> </a></li>
                     </ul>
                 </div>
             </section>
         </main>
     </div>
     <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="../app.js"></script>
 </body>
 
