--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <link rel="stylesheet" href="./index.css">
     <title>FunkoShop</title>
 </head>
@@ -59,69 +61,98 @@
         </section>
 
 
-        <section class="container seccion-ultimos-lanzamientos">
-            <h2 class="titulo-seccion">últimos lazamientos</h2>
-            <ul class="lista-ultimos-lanzamientos">
-                <li>
-                    <article class="card-producto">
-                        <a href="">
-                            <picture class="cont-img-card-producto">
-                                <span class="card-producto__tag">Nuevo</span>
-                                <img src="./assets/star-wars/trooper-1.webp" alt="STORMTROOPER LIGHTSABER"
-                                    class="img-card-producto card-item__img--front">
-                                <img src="./assets/star-wars/trooper-box.webp" alt="STORMTROOPER LIGHTSABER BOX"
-                                    class="img-card-producto card-item__img--back">
-                            </picture>
-                            <p class="subtitulo-card-producto">STAR WARS</p>
-                            <h4 class="titulo-card-producto">STORMTROOPER LIGHTSABER</h4>
-                            <p class="precio-card-producto">$ 1799,99</p>
-                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
+        <section class="slider container glide">
+            <h2 class="slider__title titulo-seccion">últimos lazamientos</h2>
+            <div class="glide__track" data-glide-el="track">
+                <ul class="slider__items glide__slides">
+                    <li class="slider__item glide__slide">
+                        <article class="card-producto">
+                            <a href="">
+                                <picture class="cont-img-card-producto">
+                                    <span class="card-producto__tag">Nuevo</span>
+                                    <img src="./assets/star-wars/trooper-1.webp" alt="STORMTROOPER LIGHTSABER"
+                                        class="img-card-producto card-item__img--front">
+                                    <img src="./assets/star-wars/trooper-box.webp" alt="STORMTROOPER LIGHTSABER BOX"
+                                        class="img-card-producto card-item__img--back">
+                                </picture>
+                                <p class="subtitulo-card-producto">STAR WARS</p>
+                                <h4 class="titulo-card-producto">STORMTROOPER LIGHTSABER</h4>
+                                <p class="precio-card-producto">$ 1799,99</p>
+                                <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
-                        </a>
-                    </article>
-                </li>
-                <li>
-                    <article class="card-producto">
-                        <a href="">
-                            <picture class="cont-img-card-producto">
-                                <span class="card-producto__tag">Nuevo</span>
-                                <img src="./assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO"
-                                    class="img-card-producto card-item__img--front">
-                                <img src="./assets/pokemon/pidgeotto-box.webp" alt="PIDGEOTTO BOX"
-                                    class="img-card-producto card-item__img--back">
-                            </picture>
-                            <p class="subtitulo-card-producto">POKEMON</p>
-                            <h4 class="titulo-card-producto">PIDGEOTTO</h4>
-                            <p class="precio-card-producto">$ 1799,99</p>
-                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="slider__item glide__slide">
+                        <article class="card-producto">
+                            <a href="">
+                                <picture class="cont-img-card-producto">
+                                    <span class="card-producto__tag">Nuevo</span>
+                                    <img src="./assets/pokemon/pidgeotto-1.webp" alt="PIDGEOTTO"
+                                        class="img-card-producto card-item__img--front">
+                                    <img src="./assets/pokemon/pidgeotto-box.webp" alt="PIDGEOTTO BOX"
+                                        class="img-card-producto card-item__img--back">
+                                </picture>
+                                <p class="subtitulo-card-producto">POKEMON</p>
+                                <h4 class="titulo-card-producto">PIDGEOTTO</h4>
+                                <p class="precio-card-producto">$ 1799,99</p>
+                                <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
-                        </a>
-                    </article>
-                </li>
-                <li>
-                    <article class="card-producto">
-                        <a href="">
-                            <picture class="cont-img-card-producto">
-                                <span class="card-producto__tag">Nuevo</span>
-                                <img src="./assets/harry-potter/luna-1.webp" alt="LUNA LOVEGOOD LION MASK"
-                                    class="img-card-producto card-item__img--front">
-                                <img src="./assets/harry-potter/luna-box.webp" alt="LUNA LOVEGOOD LION MASK BOX"
-                                    class="img-card-producto card-item__img--back">
-                            </picture>
-                            <p class="subtitulo-card-producto">HARRY POTTER</p>
-                            <h4 class="titulo-card-producto">LUNA LOVEGOOD LION MASK</h4>
-                            <p class="precio-card-producto">$ 1799,99</p>
-                            <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="slider__item glide__slide">
+                        <article class="card-producto">
+                            <a href="">
+                                <picture class="cont-img-card-producto">
+                                    <span class="card-producto__tag">Nuevo</span>
+                                    <img src="./assets/harry-potter/luna-1.webp" alt="LUNA LOVEGOOD LION MASK"
+                                        class="img-card-producto card-item__img--front">
+                                    <img src="./assets/harry-potter/luna-box.webp" alt="LUNA LOVEGOOD LION MASK BOX"
+                                        class="img-card-producto card-item__img--back">
+                                </picture>
+                                <p class="subtitulo-card-producto">HARRY POTTER</p>
+                                <h4 class="titulo-card-producto">LUNA LOVEGOOD LION MASK</h4>
+                                <p class="precio-card-producto">$ 1799,99</p>
+                                <p class="cuotas-card-producto">3 CUOTAS SIN INTERÉS</p>
 
-                        </a>
-                    </article>
-                </li>
-            </ul>
+                            </a>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                    <iconify-icon icon="ic:baseline-chevron-left"></iconify-icon>
+                </button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                    <iconify-icon icon="ic:baseline-chevron-left" rotate="180deg"></iconify-icon>
+                </button>
+            </div>
         </section>
     </main>
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script>
+        new Glide('.glide',
+            {
+                type: 'carousel',
+                startAt: 0,
+                perView: 3,
+                gap: 30,
+                breakpoints: {
+                    991: {
+                        perView: 2
+                    },
+                    768: {
+                        perView: 1
+                    }
+                }
+            }
+        ).mount();
+    </script>
     <script src="app.js"></script>
 </body>
 
