add transition to card item

--- a/pages/item.html
+++ b/pages/item.html
@@ -16,7 +16,10 @@
     <main>
         <section class="container section-item">
             <article class="article-card-item">
-                <picture><img src="../assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda"> </picture>
+                <picture class="card-item__cont-img">
+                    <img src="../assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda" class="card-item__img--front">
+                    <img src="../assets/star-wars/baby-yoda-box.webp" alt="Baby Yoda" class="card-item__img--back">
+                </picture>
                 <div class="contenedor-detalles-item">
                     <p class="subtitulo-item">STAR WARS</p>
                     <h3 class="titulo-item">BABY YODA BLUEBALL
