modifico nombre de clases

--- a/pages/item.html
+++ b/pages/item.html
@@ -13,18 +13,19 @@
     <header></header>
     <main>
         <section class="container section-item">
-            <article class="article-card-item">
-                <picture class="card-item__cont-img">
+            <article class="card-product">
+                <picture class="card-product__cover-img">
                     <img src="../assets/star-wars/baby-yoda-1.webp" alt="Baby Yoda" class="card-item__img--front">
                     <img src="../assets/star-wars/baby-yoda-box.webp" alt="Baby Yoda" class="card-item__img--back">
                 </picture>
-                <div class="contenedor-detalles-item">
-                    <p class="subtitulo-item">STAR WARS</p>
-                    <h3 class="titulo-item">BABY YODA BLUEBALL
+                <div class="card-product__details">
+                    <p class="card-product__licence">STAR WARS</p>
+                    <h3 class="card-product__name">BABY YODA BLUEBALL
                     </h3>
-                    <p class="descripcion-item">Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian Saga,
+                    <p class="card-product__description">Figura coleccionable de Baby Yoda (Grogu) - The Mandalorian
+                        Saga,
                         edición limitada.</p>
-                    <p class="precio-item">$ 1799,99</p>
+                    <p class="card-product__price">$ 1799,99</p>
                     <div class="contenedor-agregar-item">
                         <div class="cont-cantidad">
                             <input type="text" name="quantity" id="quantity" class="span-cantidad-item" value="0" />
